Fixes optimize legibility

--- a/assets/scss/_text.scss
+++ b/assets/scss/_text.scss
@@ -20,7 +20,7 @@ ol ol, ul ul, ul ol, ol ul {
 Headers
  */
 h1, h2, h3, h4, h5, h6 {
-	text-rendering: optimiseLegibility;
+	text-rendering: optimizeLegibility;
 	line-height: 1;
 	margin-top: 0;
 	font-weight: 500;
